TreeBUGS 1.5 (December 2022)
===========

* cleaned R code with package "styler"


TreeBUGS 1.4.9 (September 2022)
===========

* fix deprecated << operator in RcppArmadillo
* added references to MPT tutorial (Schmidt et al., 2022)


TreeBUGS 1.4.8 (August 2022)
===========

* check issue with HTML5 code (align, hspace)
* improved documentation of the probit regression in traitMPT()
* bugfix for getSamples() by @mariusbarth (GitHub issue #9)


TreeBUGS 1.4.7 (March 2022)
===========

* bugfix for computing transformedParameters(..) for more than two parameters at the individual level


TreeBUGS 1.4.6 (January 2021)
===========

* Minor bugfix for naming of categories in plotFit() function
* Minor bugfix for BayesFactorMPT()


TreeBUGS 1.4.5 (May 2020)
===========

* added standardized regression slopes for latent-trait MPT regression with continuous predictors (i.e., traitMPT with the option predStructure)
* BayesFactorSlope() plots the posterior distribution of the unstandardized (instead of partially standardized) slope parameter
* bugfix: posterior predictive check (PPP) for MPT models with a single tree


TreeBUGS 1.4.4 (December 2019)
===========

* Improvements and bugfixes for the C++ MCMC samplers by Marius Barth.
* Bug fixes for issues concerning class(matrix(...)) in R 4.0.0


TreeBUGS 1.4.3 (March 2019)
===========

* Thinning within C++ samplers [thanks to Marius Barth]
* New default priors for alpha and beta in betaMPT: "dgamma(1,.1)T(1,)"


TreeBUGS 1.4.2 (January 2019)
===========

* License updated to GPL-3
* Standard error for WAIC
* Hexagon sticker added


TreeBUGS 1.4.1 (December 2018)
===========

* summarizeMCMC: Batchwise computation of summary statistics to reduce RAM overload
* WAIC implemented (based on a developmental feature of JAGS)


TreeBUGS 1.3.2 (April 2018)
===========

* Bugfix: extendMPT() for betaMPT
* New function to extract MCMC samples: getSamples(...)
* Possibility to extract MCMC samples for getGroupMeans(...)

