@@ -1,29 +1,28 @@
 
-
-fitModelCpp <- function(type,
-                        eqnfile, # statistical model stuff
-                        data,
-                        restrictions,
-                        covData,
-                        predStructure, # predictor structure
-                        predType, # c("c," f", "r")
-                        transformedParameters,
-                        corProbit = TRUE,
-                        hyperprior,
-                        # MCMC stuff:
-                        n.iter = 20000,
-                        n.burnin = 2000,
-                        n.thin = 5,
-                        n.chains = 3,
-                        dic = FALSE,
-                        ppp = 0,
-                        # File Handling stuff:
-                        modelfilename,
-                        parEstFile,
-                        posteriorFile,
-                        autojags = NULL,
-                        call = NULL,
-                        cores = 1) {
+fitModelCpp <- function(
+    type,
+    eqnfile,
+    data,
+    restrictions,
+    covData,
+    predStructure,
+    predType, # c("c," f", "r")
+    transformedParameters,
+    corProbit = TRUE,
+    hyperprior,
+    n.iter = 20000,
+    n.burnin = 2000,
+    n.thin = 5,
+    n.chains = 3,
+    dic = FALSE,
+    ppp = 0,
+    modelfilename,
+    parEstFile,
+    posteriorFile,
+    autojags = NULL,
+    call = NULL,
+    cores = 1
+) {
   if (missing(restrictions)) restrictions <- NULL
   if (missing(covData)) covData <- NULL
   if (missing(transformedParameters)) transformedParameters <- NULL
