@@ -179,6 +179,7 @@ traitMPT <- function(
     n.chains = 3,
     dic = FALSE,
     ppp = 0,
+    monitorIndividual = TRUE,
     modelfilename,
     parEstFile,
     posteriorFile,
@@ -206,6 +207,7 @@ traitMPT <- function(
     n.chains = n.chains,
     dic = dic,
     ppp = ppp,
+    monitorIndividual = monitorIndividual,
     modelfilename = modelfilename,
     parEstFile = parEstFile,
     posteriorFile = posteriorFile,
